[gd_scene load_steps=12 format=2]

[ext_resource path="res://Textures/Door/DoorFullOpen.png" type="Texture" id=1]
[ext_resource path="res://Textures/Door/DoorOpen2.png" type="Texture" id=2]
[ext_resource path="res://Textures/Door/DoorOpen1.png" type="Texture" id=3]
[ext_resource path="res://Textures/Door/DoorOpen3.png" type="Texture" id=4]
[ext_resource path="res://Textures/Door/DoorClosed.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Interactables/Door.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Utilities/SoundPlayer2D.gd" type="Script" id=7]
[ext_resource path="res://Effects/OneShots/echo.tscn" type="PackedScene" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "Closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "Opened",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": false,
"name": "Opening",
"speed": 20.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": false,
"name": "Closing",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.3326, 109.74 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 26.9922, 6.01675, -29.0413, 6.12784, -29.0413, 71.3392, 28.2374, 71.117 )

[node name="Door" type="AnimatedSprite"]
frames = SubResource( 1 )
animation = "Opened"
offset = Vector2( 0, 135 )
script = ExtResource( 6 )

[node name="SoundLocation" type="Position2D" parent="."]
position = Vector2( 0, 130.402 )

[node name="OpenSound" type="AudioStreamPlayer2D" parent="SoundLocation"]
volume_db = -5.0
script = ExtResource( 7 )
sound_key = "door_open"

[node name="CloseSound" type="AudioStreamPlayer2D" parent="SoundLocation"]
volume_db = -5.0
script = ExtResource( 7 )
sound_key = "door_close"

[node name="EchoParticle" parent="SoundLocation" instance=ExtResource( 8 )]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 130.255 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 130.255 )
shape = SubResource( 2 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 3
scale = Vector2( -0.601638, 3.37175 )
occluder = SubResource( 3 )
light_mask = 3
[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="closed" from="." to="SoundLocation/CloseSound" method="play_rand_sound"]
[connection signal="opened" from="." to="SoundLocation/OpenSound" method="play_rand_sound"]
[connection signal="sound_started" from="SoundLocation/OpenSound" to="SoundLocation/EchoParticle" method="emit"]
[connection signal="sound_started" from="SoundLocation/CloseSound" to="SoundLocation/EchoParticle" method="emit"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
